--- a/tpl/default/movies/update.html
+++ b/tpl/default/movies/update.html
@@ -137,19 +137,7 @@
 								<div class="form-group has-feedback">
 									<label for="rating" class="{$colWidthSmall} control-label">{$smarty.const.RATING|htmlentities:3:'UTF-8'}</label>
 									<div class="{$colWidthLarge}">
-										<input type="text" name="rating" id="rating" class="form-control number" value="{if isset($movie) && $movie->rating != 0}{$movie->rating|htmlentities:3:'UTF-8'}{/if}" placeholder="{$smarty.const.RATING|htmlentities:3:'UTF-8'}">
-									</div>
-								</div>
-								<div class="form-group has-feedback">
-									<label for="votes" class="{$colWidthSmall} control-label">{$smarty.const.VOTES|htmlentities:3:'UTF-8'}</label>
-									<div class="{$colWidthLarge}">
-										<input type="text" name="votes" id="votes" class="form-control number" value="{if isset($movie) && $movie->votes != 0}{$movie->votes|htmlentities:3:'UTF-8'}{/if}" placeholder="{$smarty.const.VOTES|htmlentities:3:'UTF-8'}">
-									</div>
-								</div>
-								<div class="form-group has-feedback">
-									<label for="format" class="{$colWidthSmall} control-label">{$smarty.const.FORMAT|htmlentities:3:'UTF-8'}</label>
-									<div class="{$colWidthLarge}">
-										<input type="text" id="format" name="format" class="form-control required" data-provide="typeahead" autocomplete="off" value="{if isset($movie) && isset($movie->format)}{$movie->format|htmlentities:3:'UTF-8'}{else}{$smarty.const.BLU_RAY|htmlentities:3:'UTF-8'}{/if}" placeholder="{$smarty.const.FORMAT|htmlentities:3:'UTF-8'}">
+										<input type="text" id="rating" name="rating" class="form-control required" data-provide="typeahead" autocomplete="off" value="{if isset($movie) && isset($movie->rating)}{$movie->rating|htmlentities:3:'UTF-8'}{else}{$smarty.const.BLU_RAY|htmlentities:3:'UTF-8'}{/if}" placeholder="{$smarty.const.RATING|htmlentities:3:'UTF-8'}">
 									</div>
 								</div>
 								<div class="form-group has-feedback">
@@ -162,35 +150,16 @@
 									</div>
 								</div>
 								<div class="form-group has-feedback">
-									<label class="{$colWidthSmall} control-label">{$smarty.const.FAVOURITE|htmlentities:3:'UTF-8'}</label>
-									<div class="{$colWidthLarge}">
-										<label class="radio-inline" for="favourite_yes">
-										  <input type="radio" name="favourite" id="favourite_yes" value="1"{if !isset($movie) || $movie->favourite} checked{/if}> {$smarty.const.YES|htmlentities:3:'UTF-8'}
-										</label>
-										<label class="radio-inline" for="favourite_no">
-										  <input type="radio" name="favourite" id="favourite_no" value="0"{if isset($movie) && !$movie->favourite} checked{/if}> {$smarty.const.NO|htmlentities:3:'UTF-8'}
-										</label>
-									</div>
-								</div>
-								<div class="form-group has-feedback">
 									<label class="{$colWidthSmall} control-label">{$smarty.const.OWN|htmlentities:3:'UTF-8'}</label>
 									<div class="{$colWidthLarge}">
-										<label class="radio-inline" for="own_yes">
-										  <input type="radio" name="own" id="own_yes" value="1"{if !isset($movie) || $movie->own} checked{/if}> {$smarty.const.YES|htmlentities:3:'UTF-8'}
-										</label>
 										<label class="radio-inline" for="own_no">
-										  <input type="radio" name="own" id="own_no" value="0"{if isset($movie) && !$movie->own} checked{/if}> {$smarty.const.NO|htmlentities:3:'UTF-8'}
+										  <input type="radio" name="own" id="own_no" value="0"{if !isset($movie) || !$movie->own} checked{/if}> {$smarty.const.NO|htmlentities:3:'UTF-8'}
 										</label>
-									</div>
-								</div>
-								<div class="form-group has-feedback">
-									<label class="{$colWidthSmall} control-label">{$smarty.const.SEEN|htmlentities:3:'UTF-8'}</label>
-									<div class="{$colWidthLarge}">
-										<label class="radio-inline" for="seen_yes">
-										  <input type="radio" name="seen" id="seen_yes" value="1"{if !isset($movie) || $movie->seen} checked{/if}> {$smarty.const.YES|htmlentities:3:'UTF-8'}
+										<label class="radio-inline" for="own_disc">
+										  <input type="radio" name="own" id="own_disc" value="1"{if isset($movie) && $movie->own == 1} checked{/if}> {$smarty.const.DISC|htmlentities:3:'UTF-8'}
 										</label>
-										<label class="radio-inline" for="seen_no">
-										  <input type="radio" name="seen" id="seen_no" value="0"{if isset($movie) && !$movie->seen} checked{/if}> {$smarty.const.NO|htmlentities:3:'UTF-8'}
+										<label class="radio-inline" for="own_file">
+										  <input type="radio" name="own" id="own_file" value="2"{if isset($movie) && !$movie->own == 2} checked{/if}> {$smarty.const.FILE|htmlentities:3:'UTF-8'}
 										</label>
 									</div>
 								</div>
@@ -215,23 +184,6 @@
 									<label for="loandate" class="{$colWidthSmall} control-label">{$smarty.const.LOANED_OUT_SINCE|htmlentities:3:'UTF-8'}</label>
 									<div class="{$colWidthLarge}">
 										<input type="text" name="loandate" id="loandate" value="{if isset($movie) && $movie->loandate != '0000-00-00'}{$movie->loandate|htmlentities:3:'UTF-8'}{else}{$smarty.now|date_format:'%Y-%m-%d'}{/if}" class="form-control date">
-									</div>
-								</div>
-								<div class="form-group has-feedback">
-									<label class="{$colWidthSmall} control-label">{$smarty.const.TV_SERIES|htmlentities:3:'UTF-8'}</label>
-									<div class="{$colWidthLarge}">
-										<label class="radio-inline" for="tv_yes">
-										  <input type="radio" name="tv" id="tv_yes" value="1" onclick="$('#tv-container').show(); $('#tv-container input').focus();"{if isset($movie) && $movie->tv} checked{/if}> {$smarty.const.YES|htmlentities:3:'UTF-8'}
-										</label>
-										<label class="radio-inline" for="tv_no">
-										  <input type="radio" name="tv" id="tv_no" value="0" onclick="$('#tv-container').hide();"{if !isset($movie) || !$movie->tv} checked{/if}> {$smarty.const.NO|htmlentities:3:'UTF-8'}
-										</label>
-									</div>
-								</div>
-								<div id="tv-container" class="form-group has-feedback{if !isset($movie) || !$movie->tv} form-hide{/if}">
-									<label for="seasons" class="{$colWidthSmall} control-label">{$smarty.const.SEASONS|htmlentities:3:'UTF-8'}</label>
-									<div class="{$colWidthLarge}">
-										<input type="text" name="seasons" id="seasons" class="form-control digits" value="{if isset($movie)}{$movie->seasons|htmlentities:3:'UTF-8'}{/if}" maxlength="2">
 									</div>
 								</div>
 								{if isset($movie)}
@@ -308,18 +260,6 @@
 									</div>
 								</div>
 								<div class="form-group has-feedback">
-									<label for="audio" class="{$colWidthSmall} control-label">{$smarty.const.AUDIO|htmlentities:3:'UTF-8'}</label>
-									<div class="{$colWidthLarge}">
-										<textarea name="audio" id="audio" rows="5" class="form-control" placeholder="{$smarty.const.AUDIO|htmlentities:3:'UTF-8'}">{if isset($movie)}{$movie->audio|htmlentities:3:'UTF-8'}{/if}</textarea>
-									</div>
-								</div>
-								<div class="form-group has-feedback">
-									<label for="video" class="{$colWidthSmall} control-label">{$smarty.const.VIDEO|htmlentities:3:'UTF-8'}</label>
-									<div class="{$colWidthLarge}">
-										<textarea name="video" id="video" rows="5" class="form-control" placeholder="{$smarty.const.VIDEO|htmlentities:3:'UTF-8'}">{if isset($movie)}{$movie->video|htmlentities:3:'UTF-8'}{/if}</textarea>
-									</div>
-								</div>
-								<div class="form-group has-feedback">
 									<label for="country" class="{$colWidthSmall} control-label">{$smarty.const.COUNTRY|htmlentities:3:'UTF-8'}</label>
 									<div class="{$colWidthLarge}">
 										<textarea name="country" id="country" rows="5" class="form-control" placeholder="{$smarty.const.COUNTRY|htmlentities:3:'UTF-8'}">{if isset($movie)}{$movie->country|htmlentities:3:'UTF-8'}{/if}</textarea>
@@ -329,12 +269,6 @@
 									<label for="genres" class="{$colWidthSmall} control-label">{$smarty.const.GENRES|htmlentities:3:'UTF-8'}</label>
 									<div class="{$colWidthLarge}">
 										<textarea name="genres" id="genres" rows="5" class="form-control" placeholder="{$smarty.const.GENRES|htmlentities:3:'UTF-8'}">{if isset($movie)}{$movie->genres|htmlentities:3:'UTF-8'}{/if}</textarea>
-									</div>
-								</div>
-								<div class="form-group has-feedback">
-									<label for="mpaa" class="{$colWidthSmall} control-label">{$smarty.const.MPAA|htmlentities:3:'UTF-8'}</label>
-									<div class="{$colWidthLarge}">
-										<textarea name="mpaa" id="mpaa" rows="5" class="form-control" placeholder="{$smarty.const.COUNTRY|htmlentities:3:'UTF-8'}::{$smarty.const.MPAA|htmlentities:3:'UTF-8'}">{if isset($movie)}{$movie->mpaa|htmlentities:3:'UTF-8'}{/if}</textarea>
 									</div>
 								</div>
 								<div class="form-group has-feedback">
@@ -359,12 +293,6 @@
 									<label for="music" class="{$colWidthSmall} control-label">{$smarty.const.MUSIC|htmlentities:3:'UTF-8'}</label>
 									<div class="{$colWidthLarge}">
 										<textarea name="music" id="music" rows="5" class="form-control" placeholder="{$smarty.const.MUSIC|htmlentities:3:'UTF-8'}">{if isset($movie)}{$movie->music|htmlentities:3:'UTF-8'}{/if}</textarea>
-									</div>
-								</div>
-								<div class="form-group has-feedback">
-									<label for="cast" class="{$colWidthSmall} control-label">{$smarty.const.CAST|htmlentities:3:'UTF-8'}</label>
-									<div class="{$colWidthLarge}">
-										<textarea name="cast" id="cast" rows="5" class="form-control" placeholder="{$smarty.const.CAST|htmlentities:3:'UTF-8'}">{if isset($movie)}{$movie->cast|htmlentities:3:'UTF-8'}{/if}</textarea>
 									</div>
 								</div>
 							</div><!-- /.box-body -->
