--- a/tpl/default/movies/collection/sidebar.html
+++ b/tpl/default/movies/collection/sidebar.html
@@ -24,24 +24,13 @@
 
 	  <!-- Sidebar Menu -->
 	  <ul class="sidebar-menu">
-		<li class="header">{$smarty.const.CATEGORIES|htmlentities:3:'UTF-8'}</li>
+		<li class="header">{$smarty.const.GENRES|htmlentities:3:'UTF-8'}</li>
 		<li>
 			<div class="nav-select-wrapper">
 				<select id="category" onchange="search();">
-					<option value="">{$smarty.const.ALL_CATEGORIES|htmlentities:3:'UTF-8'}</option>
+					<option value="">{$smarty.const.ALL_GENRES|htmlentities:3:'UTF-8'}</option>
 					{section name=c loop=$categories}
 					<option value="{$categories[c]}">{translate($categories[c])|htmlentities:3:'UTF-8'}</option>
-					{/section}
-				</select>
-			</div>
-		</li>
-		<li class="header">{$smarty.const.FORMATS|htmlentities:3:'UTF-8'}</li>
-		<li>
-			<div class="nav-select-wrapper">
-				<select id="format" onchange="search();">
-					<option value="">{$smarty.const.ALL_FORMATS|htmlentities:3:'UTF-8'}</option>
-					{section name=f loop=$movieformats}
-					<option value="{$movieformats[f]}">{translate($movieformats[f])|htmlentities:3:'UTF-8'}</option>
 					{/section}
 				</select>
 			</div>
@@ -86,15 +75,19 @@
 		{/if}
 		<li class="header">{$smarty.const.FILTER_BY|htmlentities:3:'UTF-8'}</li>
 		<li id="filter-by-original" class="hidden">
+                    <!--
 			<i class="fa fa-2x fa-fw fa-film" title="{$smarty.const.MOVIE|htmlentities:3:'UTF-8'}" aria-hidden="true" data-id="movie" data-value="0" data-toggle="0"></i>
 			<i class="fa fa-2x fa-fw fa-tv" title="{$smarty.const.TV_SERIES|htmlentities:3:'UTF-8'}" aria-hidden="true" data-id="tv" data-value="0" data-toggle="0"></i>
+                    --!>
 			<i class="fa fa-2x fa-fw fa-star-o" title="{$smarty.const.OWN|htmlentities:3:'UTF-8'} / {$smarty.const.NOT_OWN|htmlentities:3:'UTF-8'}" aria-hidden="true" data-id="own" data-value="-1" data-toggle="1" data-remove="fa-star-o" data-add="fa-star"></i>
 			<i class="fa fa-2x fa-fw fa-eye-slash" title="{$smarty.const.SEEN|htmlentities:3:'UTF-8'} / {$smarty.const.UNSEEN|htmlentities:3:'UTF-8'}" aria-hidden="true" data-id="seen" data-value="-1" data-toggle="1" data-remove="fa-eye-slash" data-add="fa-eye"></i>
 			<i class="fa fa-2x fa-fw fa-heart-o" title="{$smarty.const.FAVOURITE|htmlentities:3:'UTF-8'} / {$smarty.const.NOT_FAVOURITE|htmlentities:3:'UTF-8'}" aria-hidden="true" data-id="favourite" data-value="-1" data-toggle="1" data-remove="fa-heart-o" data-add="fa-heart"></i>
 		</li>
 		<li id="filter-by" class="icons-group">
+                    <!--
 			<i class="{if $filterByMovie == '1'}active {/if}fa fa-2x fa-fw fa-film" title="{$smarty.const.MOVIE|htmlentities:3:'UTF-8'}" aria-hidden="true" data-id="movie" data-value="{$filterByMovie}" data-toggle="0"></i>
 			<i class="{if $filterByTv == '1'}active {/if}fa fa-2x fa-fw fa-tv" title="{$smarty.const.TV_SERIES|htmlentities:3:'UTF-8'}" aria-hidden="true" data-id="tv" data-value="{$filterByTv}" data-toggle="0"></i>
+                    --!>
 			<i class="{if $filterByOwn != '-1'}active {/if}fa fa-2x fa-fw {if $filterByOwn == '1'}fa-star{else}fa-star-o{/if}" title="{$smarty.const.OWN|htmlentities:3:'UTF-8'} / {$smarty.const.NOT_OWN|htmlentities:3:'UTF-8'}" aria-hidden="true" data-id="own" data-value="{$filterByOwn}" data-toggle="1" data-remove="fa-star-o" data-add="fa-star"></i>
 			<i class="{if $filterBySeen != '-1'}active {/if}fa fa-2x fa-fw {if $filterBySeen == '1'}fa-eye{else}fa-eye-slash{/if}" title="{$smarty.const.SEEN|htmlentities:3:'UTF-8'} / {$smarty.const.UNSEEN|htmlentities:3:'UTF-8'}" aria-hidden="true" data-id="seen" data-value="{$filterBySeen}" data-toggle="1" data-remove="fa-eye-slash" data-add="fa-eye"></i>
 			<i class="{if $filterByFavourite != '-1'}active {/if}fa fa-2x fa-fw {if $filterByFavourite == '1'}fa-heart{else}fa-heart-o{/if}" title="{$smarty.const.FAVOURITE|htmlentities:3:'UTF-8'} / {$smarty.const.NOT_FAVOURITE|htmlentities:3:'UTF-8'}" aria-hidden="true" data-id="favourite" data-value="{$filterByFavourite}" data-toggle="1" data-remove="fa-heart-o" data-add="fa-heart"></i>
