--- a/tpl/default/movies/movies/posterlist.html
+++ b/tpl/default/movies/movies/posterlist.html
@@ -8,8 +8,8 @@
 					{else}<div class="movie-nocover"></div>{/if}
 				</div>
 				<div class="movie-title">{$movies[m]->name|htmlentities:3:'UTF-8'} <small>({$movies[m]->year|htmlentities:3:'UTF-8'})</small></div>
-				<div class="movie-plot">{$movies[m]->plotoutline|htmlentities:3:'UTF-8'}</div>
-				<div class="movie-info movie-icons-{$movies[m]->tv+$movies[m]->favourite+!$movies[m]->own+!$movies[m]->seen}">
+				<div class="movie-plot">{$movies[m]->plots|htmlentities:3:'UTF-8'}</div>
+				<div class="movie-info movie-icons-{$movies[m]->favourite+!$movies[m]->seen}">
 					{durationConvertion($movies[m]->duration)|htmlentities:3:'UTF-8'}
 					| <strong>{$movies[m]->rating|htmlentities:3:'UTF-8'}</strong>/10
 					{assign var=languages value=$movies[m]->getList('languages')}
@@ -20,16 +20,8 @@
 				</div>
 			</a>
 			<div class="movie-icons" data-id="{$movies[m]->id}" data-title="{$movies[m]->name|htmlentities:3:'UTF-8'}">
-				{if $movies[m]->tv}
-					<i class="fa fa-tv fa-fw" title="{$smarty.const.TV_SERIES|htmlentities:3:'UTF-8'}" aria-hidden="true"></i>
-				{/if}
 				{if $movies[m]->favourite}
 					<i class="fa fa-heart fa-fw" title="{$smarty.const.FAVOURITE|htmlentities:3:'UTF-8'}" aria-hidden="true"></i>
-				{/if}
-				{if !$movies[m]->own && $loggedin && $User->isEditor()}
-					<i class="fa fa-star-o fa-fw" title="{$smarty.const.NOT_OWN|htmlentities:3:'UTF-8'}" aria-hidden="true" data-toggle="modal" data-target="#confirmation" data-type="own"></i>
-				{elseif !$movies[m]->own}
-					<i class="fa fa-star-o fa-fw" title="{$smarty.const.NOT_OWN|htmlentities:3:'UTF-8'}" aria-hidden="true"></i>
 				{/if}
 				{if !$movies[m]->seen && $loggedin && $User->isEditor()}
 					<i class="fa fa-eye-slash fa-fw" title="{$smarty.const.UNSEEN|htmlentities:3:'UTF-8'}" aria-hidden="true" data-toggle="modal" data-target="#confirmation" data-type="seen"></i>
